# Rust-Complete-Pack

./: .gitignore  Cargo.toml  LICENSE  README.md  SUMMARY.md
.github/workflows/: ci.yml  test-all-examples.yml
assets/diagrams/: borrow-checker-rules.md  memory-layout.md  ownership-timeline.md
assets/mindmaps/: niveau-0.md  niveau-1.md
assets/printables/: cheat-sheet-ownership.md  quick-reference.md
book/: SUMMARY.md
book/ch01-foundations/: 01-01-what-is-programming.md  01-02-what-is-rust.md  01-03-installation.md  01-04-hello-world.md  01-05-anatomy.md
book/ch02-primitives/: bool-char.md  constants.md  numeric-types.md  type-inference.md  variables.md
book/ch03-composites/: arrays.md  slices.md  string-manipulation.md  strings.md  tuples.md
book/ch04-control-flow/: for.md  if-else.md  loop.md  pattern-matching.md  while.md
book/ch05-functions/: declaration.md  doc-comments.md  implicit-return.md  parameters.md  scope.md
book/ch06-ownership/: borrowing.md  ownership-rules.md
book/ch07-lifetimes/: annotations.md  elision.md  memory-diagrams.md  parameters.md  static-lifetime.md
book/ch08-structs/: associated-functions.md  definition.md  instantiation.md  methods.md  move-copy.md  tuple-structs.md
book/ch09-enums/: comparisons.md  definition.md  enums-with-data.md  option-result.md  pattern-matching.md
book/ch10-traits/: bounds.md  definition.md  implementation.md  trait-objects.md  where-clauses.md
book/ch12-closures/: move.md  (+4 more)
cheatsheets/: async-await.md  closures.md  ownership-lifetimes.md  pattern-matching.md  security.md  traits-bounds.md
(+1533 files in other folders)
