[workspace]
members = [
    "projects/p01-hello-world",
    "projects/p02-cli-calculator",
    "projects/p03-mini-http-server",
    "projects/p04-data-pipeline",
    "projects/p05-terminal-game",
    "projects/p06-web-service",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Rust Learning Guide - AnonSecLab"]
license = "PROPRIETARY"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
reqwest = { version = "0.11", features = ["json"] }

